--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="content">
             <span class="article">
               <div>
-                <img src="images/Python.png" alt="Python"/>
+                <img src="images/python.png" alt="Python"/>
                 <img src="images/SQL.png" alt="SQL"/>
                 <img src="images/PowerBI.png" alt="PowerBI"/>
               </div>
@@ -117,7 +117,7 @@
           <div class="content">
             <span class="article">
               <div>
-                <img src="images/Python.png" alt="Python"/>
+                <img src="images/python.png" alt="Python"/>
               </div>
               <p>
                 This project is a simple Python script that I developed to sort files efficiently. The main objective is that the user can configure the way his files will be saved according to their extensions, and that once activated, they will be automatically initialized when the system is turned on. It is an excellent way to keep the download folder organized.
@@ -138,7 +138,7 @@
           <div class="content">
             <span class="article">
               <div>
-                <img src="images/Python.png" alt="Python"/>
+                <img src="images/python.png" alt="Python"/>
               </div>
               <p>
                 This is a simple I built to fetch and serve recent Stack Overflow questions using the Stack Exchange public API. I developed it with Flask to create lightweight and fast endpoints that return JSON data containing titles, tags, links, and creation dates of the most recent questions. It is useful for integrating Stack Overflow updates into other platforms or tools, such as dashboards or bots. I kept the code modular and added error handling to ensure it remains reliable even if the external API fails or returns unexpected data.
